--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@ folder instead of downloading all of them to reduce the load. -->
                 <img src="IMG_3559.3.jpg" class="img-circle" alt="User Image">
               </div>
               <div class="pull-left info">
-                <p>Panupong</p>
+                <p>Panupong Tubkerd</p>
               </div>
             </div>
             <!-- sidebar menu: : style can be found in sidebar.less -->
