--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@ folder instead of downloading all of them to reduce the load. -->
       
         <!-- Left side column. contains the sidebar -->
         
-        <aside class="main-sidebar" style="background-color:white; color: white;">
+        <aside class="main-sidebar" style="background-color:black; color: black;">
           <!-- sidebar: style can be found in sidebar.less -->
           <section class="sidebar" style="height: auto;">
             <!-- Sidebar user panel -->
