--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ folder instead of downloading all of them to reduce the load. -->
           </li>
           
           <li>
-            <a href="/game.html">
+            <a href="./game.html">
               <i class="fa fa-gamepad"></i> <span>Game</span>
             </a>
           </li>
